longhorn/longhorn-Ingress.yaml
# longhorn-Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: longhorn-fronend-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - longhorn.k8s.your.domain.edu.tw
    secretName: longhorn-frontend-tls
  rules:
  - host: longhorn.k8s.your.domain.edu.tw
    http:
      paths:
      - backend:
          serviceName: longhorn-frontend
          servicePort: 80
